Fix: Unequal showcase spacing

--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -1246,7 +1246,6 @@
     .taxonomy {
       @include shadow1;
       border: 1px solid $lightGrey;
-      margin-top: 1rem;
     }
     .taxonomy-label {
       @include shadow1;
